--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Smart-Skill-Workload-Management-System
+spring.datasource.url=jdbc:mysql://localhost:3306/SmartSkillManagement
+spring.datasource.username=root
+spring.datasource.password=Shub@2004
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+server.servlet.context-path=/api
